# xmonad-workspace-switcher

./: LICENSE  README.md  stack.yaml  xmonad-workspace-switcher.cabal
src/: Main.hs
src/XMonad/Actions/: WorkspaceSwitcher.hs
